@@ -4,13 +4,14 @@ Jump Start Changelog
 2.1.4 - XX/XX/XXXX
 ------------------
 
-* Fixed: Polylang plugin errors when translating post.
 * Fixed: Put back accidentally removed themeblvd_footer_above action (but deprecated).
 * Fixed: Occasional display issues on archives and search results, due to `is_page_template()` bug in WordPress 4.7.
-* Fixed: Minor styling quirks on tablet transparent header menu icons.
+* Fixed: Minor styling quirks on tablet transparent header menu icons with Agent base.
 * Fixed: Option "Always start scale (y-axis) at 0" for bar and line chart elements not working.
+* Fixed: Polylang plugin errors when translating pages.
 * Fixed: WooCommerce star ratings with partial stars not displaying properly in IE and Edge.
 * Fixed: WooCommerce `[product_categories]` shortcode not always displaying proper number of columns.
+* Removed: WooCommerce script to put back old increment buttons on shopping cart. Use [this plugin](https://wordpress.org/plugins/woocommerce-quantity-increment) to get them back.
 
 --------------------------------------------------------------
 
